2009.01.31

* Removed ez_setup dependence.
* Fixed old parameter name in example.
* Added shell script for testing example code.
* Updated TODO.

2009.01.30

* Changed the rrd.* classes to inherit from the mapper.* classes.
* Added last update tracking.
* Updated RRD.load to use the mapper map method.
* Cleaned up some variable names and comments.
* Added missing mapper module.
* Added printInfo method to the base mapper class.
* Updated the RRD.info method to use the printInfo mapper method.
* Added support for printing info of loaded RRD files.
* Updated TODO.
* Updated example4 to use current times instead of the times for when the
examples were originally written (2005).
* Added a string coercion before doing a split on dateOrData.
* Removed old docstrings.
* Improved getData mapper methods to descend into sub-objects.
* Improved the output format of the external fetch function.
* Fixed the external fetch and made the output format more usable.
* Added support for a fetch method on the RRD class.

2009.01.29

* Updated the TODO with thoughts/plans for implementing an info method.
* Started stubbing out the code that will support loading data from files (and
thus an info method).
* Added a reference directory with the dump dtd in it.
* Added acknowledgements to README.
* Removed the testing sandbox in trunk.
* Renamed "read" to "load".
* Added dump function with doctests.
* Added working code and doctests for loading an RRD XML dump file as an
ElementTree instance.
* Added an XML module for extracting data from RRD dumps.
* Removed stubbed mapper objects from rrd module.
* Added mapper module for mapping ElementTree XML nodes to Python objects with
attributes.
* With the use of slots, removed __dict__ references.

2009.01.28

* Updated the old admin scripts to use bazaar.
* Added more scripts, including definitions for pushing back up to Google Code
(Subversion).
* Added a fix for Windows users. Fixes: http://code.google.com/p/pyrrd/issues/detail?id=1