@@ -4,6 +4,8 @@
 * Fixed old parameter name in example.
 * Added shell script for testing example code.
 * Updated TODO.
+* Updated the RRD class so that manual calls to load are not necessary if an
+RRD instance is created with the mode="r" parameter.
 
 2009.01.30
 
